nowy mechanizm przypominania hasla
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3211 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -69,7 +69,7 @@ PreviousPageHistory=back.png
 NextPageHistory=forward.png
 
 ChangePassMail=pass-mail.png
-ChangePass=password16.png
+RemindPass=password16.png
 RegisterUser=newuser.png
 UnregisterUser=deluser.png
 Mobile=mobile.png
@@ -93,6 +93,7 @@ UpdateUserButton=reload.png
 RegisterAccountButton=reload.png
 UnregisterAcctounButton=reload.png
 ChangePasswordEmailButton=reload.png
+RemindPasswordButton=reload.png
 DeleteIgnoredButton=stop.png
 AddIgnoredButton=reload.png
 ReloadPersonalInfoButton=reload.png
@@ -110,6 +111,7 @@ ManageUsersWindowIcon=personalinfo.png
 ManageIgnoredWindowIcon=manageignored.png
 PersonalInformationWindowIcon=personalinfo.png
 ChangePasswordWindowIcon=password.png
+RemindPasswordWindowIcon=remind-pass.png
 RegisterWindowIcon=registeraccount.png
 UnregisterWindowIcon=unregisteraccount.png
 SelectPathWindowIcon=selectpath.png
