--- a/libgadu/Makefile.in
+++ b/libgadu/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.29 2004/01/10 18:52:17 adrian Exp $
+# $Id: Makefile.in,v 1.30 2005/04/16 18:31:04 joi Exp $
 
 prefix = @prefix@
 datadir = @datadir@
