katalog .kadu i modul migration
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3264 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -161,6 +161,10 @@ module_autoaway=m
 # Depends: account_management sound hints
 module_config_wizard=m
 
+# Description: Migration utility
+# PL: Narzedzie do migracji
+module_migration=m
+
 # Description: Autoresponder module
 # PL: Modu³ automatycznej odpowiedzi
 module_autoresponder=m
