--- a/.config
+++ b/.config
@@ -272,6 +272,10 @@ module_tabs=n
 # Depends: notify
 module_led_notify=n
 
+# Description: 
+# PL: Dodaje mo¿liwo¶æ zaznaczenia fragmentu ekranu i wys³ania obrazka z jego zawarto¶ci±
+module_screenshot=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
