--- a/.config
+++ b/.config
@@ -162,7 +162,7 @@ module_autoaway=m
 module_config_wizard=m
 
 # Description: Migration utility
-# PL: Narzedzie do migracji
+# PL: Narzêdzie do migracji
 module_migration=m
 
 # Description: Autoresponder module
@@ -275,6 +275,10 @@ module_tabs=n
 # Needs: libX11
 # Depends: notify
 module_led_notify=n
+
+# Description: 
+# PL: Dodaje mo¿liwo¶æ zaznaczenia fragmentu ekranu i wys³ania obrazka z jego zawarto¶ci±
+module_screenshot=n
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
