'dodany do autodownloadu moduł osdhints_notify'
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3322 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -51,6 +51,29 @@ module_wmaker_docking=n
 # Depends: docking
 module_desktop_docking=n
 
+###################### notifications #################################
+# PL: ################ powiadamianie #################################
+
+# Description: General notification module (common part of all notification modules)
+# PL: Podstawowa obs³uga powiadomieñ o zdarzeniach (wspólna czê¶æ wszystkich
+# PL:                                               modu³ów powiadomieñ)
+module_notify=y
+
+# Description: Notification by window module
+# PL: Powiadamianie za pomoc± wyskakuj±cego okienka
+# Depends: notify
+module_window_notify=m
+
+# Description: Notification by hints module
+# PL: Powiadamianie za pomoc± dymków
+# Depends: notify
+module_hints=m
+
+# Description: Speech synthesis support ("powiedz")
+# PL: Powiadamianie mow± za pomoc± programu "powiedz"
+# Depends: notify
+module_speech=n
+
 ##################### sound ##########################################
 # PL: ############### d¼wiêk #########################################
 
@@ -93,29 +116,6 @@ module_nas_sound=n
 # PL: Obs³uga d¼wiêku poprzez zewnêtrzn± aplikacjê
 # Depends: sound
 module_ext_sound=m
-
-###################### notifications #################################
-# PL: ################ powiadamianie #################################
-
-# Description: General notification module (common part of all notification modules)
-# PL: Podstawowa obs³uga powiadomieñ o zdarzeniach (wspólna czê¶æ wszystkich
-# PL:                                               modu³ów powiadomieñ)
-module_notify=y
-
-# Description: Notification by window module
-# PL: Powiadamianie za pomoc± wyskakuj±cego okienka
-# Depends: notify
-module_window_notify=m
-
-# Description: Notification by hints module
-# PL: Powiadamianie za pomoc± dymków
-# Depends: notify
-module_hints=m
-
-# Description: Speech synthesis support ("powiedz")
-# PL: Powiadamianie mow± za pomoc± programu "powiedz"
-# Depends: notify
-module_speech=n
 
 ###################### p2p ###########################################
 # PL: ################ po³±czenia bezpo¶rednie #######################
@@ -178,7 +178,7 @@ module_echo=n
 # PL: ####################################### ZEWNÊTRZNE #########################################################################
 
 #
-# Below are some external modules, made by third parties, but
+# Below there are some external modules, made by third parties, but
 # accepted by Kadu Team and quite well supported on our forum. When
 # you choose to install any of these, the sources will be downloaded
 # from their original web pages, so don't blame us when they are
@@ -190,7 +190,7 @@ module_echo=n
 #
 
 # PL: Poni¿ej znajduje siê lista zewnêtrznych modu³ów, stworzonych przez niezale¿nych programistów,
-# PL: ale zaakceptowane przez Kadu Team i wspierane na naszym forum. Gdy wybierzesz który¶
+# PL: ale zaakceptowanych przez Kadu Team i wspierane na naszym forum. Gdy wybierzesz który¶
 # PL: z tych modu³ów, jego ¼ród³a zostan± pobrane ze strony twórcy, wiêc w razie problemów nie wiñ
 # PL: nas z powodu ich (prawdopodobnie czasowej) niedostêpno¶ci.
 
@@ -220,7 +220,7 @@ module_filedesc=n
 # Depends: hints
 module_mail=n
 
-# Description: Spellchecker module
+# Description: Spellchecking in chat window
 # PL: Sprawdzanie b³êdów pisowni w oknie rozmowy
 # Needs: libaspell
 module_spellchecker=n
@@ -279,6 +279,10 @@ module_led_notify=n
 # Description: 
 # PL: Dodaje mo¿liwo¶æ zaznaczenia fragmentu ekranu i wys³ania obrazka z jego zawarto¶ci±
 module_screenshot=n
+
+# Description: Notification by OSD-like hints
+# PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
+module_osdhints_notify=n
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
