poprawka segfaulta w voice
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3333 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -262,7 +262,7 @@ AC_DEFUN(PROCESS_MODULE_SPEC_FILES,[
 			MODULE_TOOLS= && \
 			MODULE_CONFIGURE_CMD= && \
 			MODULE_LDFLAGS= && \
-			MODULE_CXXFLAGS= && \
+			MODULE_CXXFLAGS=" $CFLAGS $CPPFLAGS" && \
 			MODULE_DIR=../modules/$mod && \
 			. ./modules/$mod/spec && \
 			echo "MODULE_LIBS:           $MODULE_LIBS" && \
