poprawka instalacji zestawów ikon
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3344 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/Makefile.am
+++ b/varia/Makefile.am
@@ -9,7 +9,7 @@ install-data-local: uninstall-local
 		echo -e "\033[32m>>>\033[0m Installing $$i_t icon theme ..."; \
 		$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/themes/icons/$$i_t"; \
 		$(INSTALL_DATA) themes/icons/$$i_t/icons.conf "$(DESTDIR)/$(datadir)/kadu/themes/icons/$$i_t"; \
-		$(INSTALL_DATA) themes/icons/$$i_t/*.png "$(DESTDIR)/$(datadir)/kadu/themes/icons/$$i_t"; \
+		$(INSTALL_DATA) themes/icons/$$i_t/* "$(DESTDIR)/$(datadir)/kadu/themes/icons/$$i_t"; \
 	done
 
 	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/themes/emoticons/"	
