animowana ikona nadejścia wiadomości
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3346 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -54,6 +54,7 @@ ShowHideInactiveUsers=offline.png
 ShowOnlyDescriptionUsers=online_d.png
 
 Message=message.png
+MessageAnim=message_anim.gif
 Blocking=blocking.png
 
 FetchUserList=importuserlist.png
