poprawka do configuracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3353 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu-config.h.in
+++ b/kadu-config.h.in
@@ -143,3 +143,5 @@
 
 /* Define to rpl_malloc if the replacement function should be used. */
 #undef malloc
+
+/*Updated Wto 28 Cze 00:00:47 2005 UTC*/
