ułatwiacze dla macosx, cz.1
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3361 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -64,9 +64,9 @@ kadu-headers.d: kadu-headers.h
 INCLUDES = $(PHEADERS_INCLUDES) $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GADU_INCLUDES)
 
 kadu_LDADD = \
-$(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS) \
 $(foreach mod,$(basename $(static_modules)),../modules/$(mod)/$(mod).a) \
-$(static_modules_ldflags) $(GADU_LIBS)
+$(static_modules_ldflags) $(GADU_LIBS) \
+$(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS)
 
 kadu_LDFLAGS = \
 $(PTHREAD_LDFLAGS) -rdynamic $(OPENSSL_LIBS)
