--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -148,9 +148,9 @@ updates_moc.cpp
 INCLUDES = $(PHEADERS_INCLUDES) $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GADU_INCLUDES)
 
 kadu_LDADD = \
-$(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS) \
 $(foreach mod,$(basename $(static_modules)),../modules/$(mod)/$(mod).a) \
-$(static_modules_ldflags) $(GADU_LIBS)
+$(static_modules_ldflags) $(GADU_LIBS) \
+$(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS)
 
 
 kadu_LDFLAGS = \
