moduły dynamiczne na MacOS X
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3368 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.in
+++ b/Makefile.in
@@ -93,6 +93,7 @@ CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DYNAMIC_OPT = @DYNAMIC_OPT@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
@@ -128,7 +129,10 @@ QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
 QT_MOC_DIR = @QT_MOC_DIR@
 SET_MAKE = @SET_MAKE@
+SHARED_FLAGS = @SHARED_FLAGS@
+SHARED_OPT = @SHARED_OPT@
 SHELL = @SHELL@
+SO_EXT = @SO_EXT@
 STATIC_MODULES_DECLS = @STATIC_MODULES_DECLS@
 STATIC_MODULES_REGRS = @STATIC_MODULES_REGRS@
 STRIP = @STRIP@
