--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -69,7 +69,7 @@ $(static_modules_ldflags) $(GADU_LIBS) \
 $(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS)
 
 kadu_LDFLAGS = \
-$(PTHREAD_LDFLAGS) -rdynamic $(OPENSSL_LIBS)
+$(PTHREAD_LDFLAGS) $(DYNAMIC_OPT) $(OPENSSL_LIBS)
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT
 
