--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -71,6 +71,7 @@ CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DYNAMIC_OPT = @DYNAMIC_OPT@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
@@ -106,7 +107,10 @@ QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
 QT_MOC_DIR = @QT_MOC_DIR@
 SET_MAKE = @SET_MAKE@
+SHARED_FLAGS = @SHARED_FLAGS@
+SHARED_OPT = @SHARED_OPT@
 SHELL = @SHELL@
+SO_EXT = @SO_EXT@
 STATIC_MODULES_DECLS = @STATIC_MODULES_DECLS@
 STATIC_MODULES_REGRS = @STATIC_MODULES_REGRS@
 STRIP = @STRIP@
@@ -168,7 +172,7 @@ target_vendor = @target_vendor@
 CONFIGURE_INCLUDES = $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
 INCLUDES = $(PHEADERS_INCLUDES) -I.. -I../kadu $(CONFIGURE_INCLUDES)
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT
-CLEANFILES = */*.so */*.a */*.o */*_moc.cpp */*.d
+CLEANFILES = */*.$(SO_EXT) */*.a */*.o */*_moc.cpp */*.d
 module_d_files = $(addsuffix .d,$(basename $(module_o_files)))
 all: all-am
 
@@ -359,7 +363,7 @@ all:
 		for h_file in $$MODULE_HEADERS; do \
 			h_files="$$h_files $$dir/$$h_file"; \
 		done && \
-		file_name=$$dir.so && \
+		file_name=$$dir.$(SO_EXT) && \
 		if test -z `expr " $(shared_modules) " : ".* \($$dir\) "`; then \
 			file_name=$$dir.a; \
 		fi && \
@@ -386,8 +390,8 @@ all:
 $(module_o_files):
 $(module_moc_cpp_files):
 
-%.so: $(module_o_files)
-	$(CC) -shared -o $@ $(module_o_files) $(module_ldflags)
+%.$(SO_EXT): $(module_o_files)
+	$(CXX) $(SHARED_OPT) -o $@ $(module_o_files) $(module_ldflags) $(SHARED_FLAGS)
 
 %.a: $(module_o_files)
 	$(AR) rs $@ $(module_o_files)
@@ -443,14 +447,14 @@ install-data-local: uninstall-local
 			done; \
 		fi; \
 		if test -z `expr " $(static_modules) " : ".* \($$dir\) "`; then \
-			$(INSTALL_DATA) $$dir/$$dir.so "$(DESTDIR)/$(datadir)/kadu/modules/"; \
+			$(INSTALL_DATA) $$dir/$$dir.$(SO_EXT) "$(DESTDIR)/$(datadir)/kadu/modules/"; \
 		fi; \
 	done
 
 uninstall-local:
 	rm -f "$(DESTDIR)/$(includedir)/kadu/modules"/*.h
 	rm -f "$(DESTDIR)/$(datadir)/kadu/modules"/*.desc
-	rm -f "$(DESTDIR)/$(datadir)/kadu/modules"/*.so
+	rm -f "$(DESTDIR)/$(datadir)/kadu/modules"/*.$(SO_EXT)
 	rm -f "$(DESTDIR)/$(datadir)/kadu/modules/translations"/*.qm
 	rm -rf "$(DESTDIR)/$(datadir)/kadu/modules/data"/*
 
