--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -78,6 +78,7 @@ AWK = @AWK@
 CC = @CC@
 CXX = @CXX@
 DEPDIR = @DEPDIR@
+DYNAMIC_OPT = @DYNAMIC_OPT@
 GADU_INCLUDES = @GADU_INCLUDES@
 GADU_LIBS = @GADU_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
@@ -90,6 +91,9 @@ PTHREAD_LIBS = @PTHREAD_LIBS@
 QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
 QT_MOC_DIR = @QT_MOC_DIR@
+SHARED_FLAGS = @SHARED_FLAGS@
+SHARED_OPT = @SHARED_OPT@
+SO_EXT = @SO_EXT@
 STATIC_MODULES_DECLS = @STATIC_MODULES_DECLS@
 STATIC_MODULES_REGRS = @STATIC_MODULES_REGRS@
 STRIP = @STRIP@
@@ -113,7 +117,7 @@ INCLUDES = $(PHEADERS_INCLUDES) -I.. -I../kadu $(CONFIGURE_INCLUDES)
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT
 
-CLEANFILES = */*.so */*.a */*.o */*_moc.cpp */*.d
+CLEANFILES = */*.$(SO_EXT) */*.a */*.o */*_moc.cpp */*.d
 
 CXXFLAGS = @CXXFLAGS@
 
@@ -275,7 +279,7 @@ all:
 		for h_file in $$MODULE_HEADERS; do \
 			h_files="$$h_files $$dir/$$h_file"; \
 		done && \
-		file_name=$$dir.so && \
+		file_name=$$dir.$(SO_EXT) && \
 		if test -z `expr " $(shared_modules) " : ".* \($$dir\) "`; then \
 			file_name=$$dir.a; \
 		fi && \
@@ -302,8 +306,8 @@ all:
 $(module_o_files):
 $(module_moc_cpp_files):
 
-%.so: $(module_o_files)
-	$(CC) -shared -o $@ $(module_o_files) $(module_ldflags)
+%.$(SO_EXT): $(module_o_files)
+	$(CXX) $(SHARED_OPT) -o $@ $(module_o_files) $(module_ldflags) $(SHARED_FLAGS)
 
 %.a: $(module_o_files)
 	$(AR) rs $@ $(module_o_files)
@@ -359,14 +363,14 @@ install-data-local: uninstall-local
 			done; \
 		fi; \
 		if test -z `expr " $(static_modules) " : ".* \($$dir\) "`; then \
-			$(INSTALL_DATA) $$dir/$$dir.so "$(DESTDIR)/$(datadir)/kadu/modules/"; \
+			$(INSTALL_DATA) $$dir/$$dir.$(SO_EXT) "$(DESTDIR)/$(datadir)/kadu/modules/"; \
 		fi; \
 	done
 
 uninstall-local:
 	rm -f "$(DESTDIR)/$(includedir)/kadu/modules"/*.h
 	rm -f "$(DESTDIR)/$(datadir)/kadu/modules"/*.desc
-	rm -f "$(DESTDIR)/$(datadir)/kadu/modules"/*.so
+	rm -f "$(DESTDIR)/$(datadir)/kadu/modules"/*.$(SO_EXT)
 	rm -f "$(DESTDIR)/$(datadir)/kadu/modules/translations"/*.qm
 	rm -rf "$(DESTDIR)/$(datadir)/kadu/modules/data"/*
 
