macosx: poprawki w instalacji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3372 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -636,7 +636,7 @@ if test "$enable_macosx" = "yes"; then
 	DYNAMIC_OPT=
 	SO_EXT=dylib
 	SHARED_OPT=-dynamiclib
-	SHARED_FLAGS=-undefined suppress -flat_namespace
+	SHARED_FLAGS="-undefined suppress -flat_namespace"
 
 #only on MacOSX>=10.3
 #	SHARED_FLAGS=-undefined dynamic_lookup
