dokowanie na macosx
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3378 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -51,6 +51,11 @@ module_wmaker_docking=n
 # Depends: docking
 module_desktop_docking=n
 
+# Description: MacOS X docking module
+# PL: Modu³ s³u¿±cy symulacji dokowania na MacOS X
+# Depends: docking
+module_macosx_docking=n
+
 ###################### notifications #################################
 # PL: ################ powiadamianie #################################
 
