--- a/.config
+++ b/.config
@@ -43,13 +43,13 @@ module_x11_docking=m
 # PL: Modu³ obs³ugi dokowania w WindowMakerze
 # Needs: libX11
 # Depends: docking
-module_wmaker_docking=m
+module_wmaker_docking=n
 
 # Description: Always on top window docking module
 # PL: Modu³ s³u¿±cy symulacji dokowania przy pomocy ma³ego okna
 # PL: (bez ramek i z ustawion± flag± "Zawsze na wierzchu")
 # Depends: docking
-module_desktop_docking=m
+module_desktop_docking=n
 
 # Description: MacOS X docking module
 # PL: Modu³ s³u¿±cy symulacji dokowania na MacOS X
@@ -77,7 +77,7 @@ module_hints=m
 # Description: Speech synthesis support ("powiedz")
 # PL: Powiadamianie mow± za pomoc± programu "powiedz"
 # Depends: notify
-module_speech=m
+module_speech=n
 
 ##################### sound ##########################################
 # PL: ############### d¼wiêk #########################################
@@ -103,13 +103,13 @@ module_dsp_sound=m
 # PL: Obs³uga d¼wiêku przez serwer aRts
 # Needs: libartsc
 # Depends: sound
-module_arts_sound=m
+module_arts_sound=n
 
 # Description: ESD sound server support
 # PL: Obs³uga d¼wiêku przez serwer ESD
 # Needs: libesd
 # Depends: sound
-module_esd_sound=m
+module_esd_sound=n
 
 # Description: Network Audio System support
 # PL: Obs³uga d¼wiêku przez Network Audio System
@@ -166,10 +166,6 @@ module_autoaway=m
 # Depends: account_management sound hints
 module_config_wizard=m
 
-# Description: Migration utility
-# PL: Narzêdzie do migracji
-module_migration=m
-
 # Description: Autoresponder module
 # PL: Modu³ automatycznej odpowiedzi
 module_autoresponder=m
@@ -177,7 +173,7 @@ module_autoresponder=m
 # Description: Echo module (it's only example!)
 # PL: Modu³ automatycznej odpowiedzi z przedrostkiem "KADU ECHO: "
 # PL: (to tylko przyk³ad jak siê pisze modu³y do Kadu)
-module_echo=m
+module_echo=n
 
 ############################################# EXTERNAL ###########################################################################
 # PL: ####################################### ZEWNÊTRZNE #########################################################################
