poprawna instalacja nagłówków przy użyciu zmiennej DESTDIR
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3448 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -7,7 +7,7 @@ expimp.cpp gadu.cpp history.cpp ignore.cpp kadu.cpp main.cpp message_box.cpp \
 misc.cpp modules.cpp pending_msgs.cpp personal_info.cpp search.cpp status.cpp \
 tabbar.cpp userbox.cpp userinfo.cpp userlist.cpp updates.cpp
 
-kadudir = $(DESTDIR)$(includedir)/kadu
+kadudir = $(includedir)/kadu
 
 kadu_HEADERS = \
 about.h chat.h config_dialog.h config_file.h debug.h emoticons.h \
