automatyczne tworzenie/aktualizacja plików translacji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3461 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.in
+++ b/Makefile.in
@@ -94,6 +94,7 @@ PTHREAD_LDFLAGS = @PTHREAD_LDFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
 QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
+QT_LRELEASE_DIR = @QT_LRELEASE_DIR@
 QT_MOC_DIR = @QT_MOC_DIR@
 SET_MAKE = @SET_MAKE@
 SHARED_FLAGS = @SHARED_FLAGS@
