--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -99,6 +99,7 @@ PTHREAD_LDFLAGS = @PTHREAD_LDFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
 QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
+QT_LRELEASE_DIR = @QT_LRELEASE_DIR@
 QT_MOC_DIR = @QT_MOC_DIR@
 SET_MAKE = @SET_MAKE@
 SHARED_FLAGS = @SHARED_FLAGS@
@@ -444,7 +445,17 @@ $(module_targets):
 		"module_cxxflags=$$MODULE_CXXFLAGS" \
 		"module_ldflags=$$MODULE_LDFLAGS" \
 		$$dir/$$file_name && \
-	cd $$dir && eval "$$MODULE_MAKE_CMD" && cd .. || \
+	cd $$dir && eval "$$MODULE_MAKE_CMD" && \
+	if test -d translations; then \
+		cd translations && \
+		for trans in *.ts; do \
+			if [ ! -e $${trans//\ts/qm} ] || test $$trans -nt $${trans//\ts/qm}; then \
+				$(QT_LRELEASE_DIR)/lrelease $$trans; \
+			fi; \
+		done && \
+		cd ..; \
+	fi && \
+	cd .. || \
 	exit 1
 
 all: $(module_targets)
