--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -94,6 +94,7 @@ PTHREAD_LDFLAGS = @PTHREAD_LDFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
 QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
+QT_LRELEASE_DIR = @QT_LRELEASE_DIR@
 QT_MOC_DIR = @QT_MOC_DIR@
 SET_MAKE = @SET_MAKE@
 SHARED_FLAGS = @SHARED_FLAGS@
