--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -362,7 +362,7 @@ install-data-local: uninstall-local
 			for sub_dir in `find $$dir/data -type d | grep -v /CVS | grep -v /.svn`; do \
 				dst_dir=`echo "$$sub_dir" | sed "s,/data/,/," | sed "s,/data$$,,"`; \
 				$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/data/$$dst_dir"; \
-				for new_file in `find $$sub_dir -type f -maxdepth 1 | sed "s/ /_SPACE_/g"`; do \
+				for new_file in `find $$sub_dir -maxdepth 1 -type f | sed "s/ /_SPACE_/g"`; do \
 					new_file=`echo "$$new_file" | sed "s/_SPACE_/ /g"`; \
 					$(INSTALL_DATA) "$$new_file" "$(DESTDIR)$(datadir)/kadu/modules/data/$$dst_dir"; \
 				done; \
@@ -372,7 +372,7 @@ install-data-local: uninstall-local
 			for sub_dir in `find $$dir/bin -type d | grep -v /CVS | grep -v /.svn`; do \
 				dst_dir=`echo "$$sub_dir" | sed "s,/bin/,/," | sed "s,/bin$$,,"`; \
 				$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/bin/$$dst_dir"; \
-				for new_file in `find $$sub_dir -type f -maxdepth 1 | sed "s/ /_SPACE_/g"`; do \
+				for new_file in `find $$sub_dir -maxdepth 1 -type f | sed "s/ /_SPACE_/g"`; do \
 					new_file=`echo "$$new_file" | sed "s/_SPACE_/ /g"`; \
 					$(INSTALL_PROGRAM) "$$new_file" "$(DESTDIR)$(datadir)/kadu/modules/bin/$$dst_dir"; \
 				done; \
