tworzenie plików *.qm / warningi przy instalacji modułów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3468 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.in
+++ b/Makefile.in
@@ -86,6 +86,7 @@ PTHREAD_LDFLAGS = @PTHREAD_LDFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
 QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
+QT_LRELEASE_DIR = @QT_LRELEASE_DIR@
 QT_MOC_DIR = @QT_MOC_DIR@
 SHARED_FLAGS = @SHARED_FLAGS@
 SHARED_OPT = @SHARED_OPT@
