--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -86,6 +86,7 @@ PTHREAD_LDFLAGS = @PTHREAD_LDFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
 QT_INCLUDES = @QT_INCLUDES@
 QT_LIBS = @QT_LIBS@
+QT_LRELEASE_DIR = @QT_LRELEASE_DIR@
 QT_MOC_DIR = @QT_MOC_DIR@
 SHARED_FLAGS = @SHARED_FLAGS@
 SHARED_OPT = @SHARED_OPT@
